2003-12-22 multipath-010
	* don't print .sg_dev if equal to .dev (2.6) in print_path()
	* since the kernel code handles defective paths, remove all
	  code to cope with them :
		* move do_tur() to unused.c
		* remove .state from path struct
		* remove .state settings & conditionals
	* add a cmdline switch to force maps to failover mode,
	  ie 1 path per priority group
	* add default policies to the whitelist array (spread io ==
	  MULTIBUS / io forced to 1 path == FAILOVER)
	* move get_disk_size() call out of add_map() to coalesce()
	* comment tricky coalesce() fn
	* bogus unsused.c file renamed to unused.c
2003-12-20 multipath-010
	* big ChangeLog update
	* start to give a little control over target params :
	  introduce cmdline arg -i to control polling interval
	* cope with hotplug-style calling convention :
	  ie "multipath scsi $DEVPATH" ... to avoid messing with
	  online maps not concerned by an event
	* example hotplug agent to drop in /etc/hotplug.d/scsi
	* revert the run & resched patch : unless someone proves me
	  wrong, this was overdesigned
	* move commented out functions in unused.c
	* update multipath target params to "udm[23] style"
	* mp target now supports nr_path == 1, so do we
	* add gratuitous free()
	* push version forward
2003-12-15 multipath-009
	* Make the HW-specific get_unique_id switch pretty
	* Prepare to field-test by whitelisting all known fibre array,
	  try to fetch WWID from the standard EVPD 0x83 off 8 for everyone
	* configure the multipath target with round-robin path selector and
	  conservative default for a start (udm1 style) :
	  yes it makes this release the firstreally useful one.
	* temporarily disable map creation for single path device
	  due to current restrictive defaults in the kernel target.
	  Sistina should work it out.
	* correct the strncmp logic in blacklist function.
	* update the Makefiles to autodetect libgcc.a & gcc includes
	  "ulibc-style". Factorisation of udevdirs & others niceties